--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,6 @@ services:
     restart: always
     container_name: mailcatcher
     ports:
-    - 1025:1025
-    environment:
-    - MC_PORT=1025
-    - MC_HOST=xxx.dyndns.org
-    - MC_REDIRECT_TO=xxx@gmail.com
-    - MC_SENDER_MAIL=yyy@googlemail.com
-    - MC_SMTP_HOST=smtp.gmail.com
-    - MC_SMTP_PORT=587
-    - MC_SMTP_USER=yyy@googlemail.com
-    - MC_SMTP_PASSWORD=yyy123
+    - "25:25"
+    env_file:
+      - env_file
