--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.1'
 services:
   mailcatcher:
-    image: ghcr.io/0xerr0r/mailcatcher
+    image: groot:latest
     restart: always
     container_name: mailcatcher
     ports:
